--- a/JavaScriptCode/Pinella/style.css
+++ b/JavaScriptCode/Pinella/style.css
@@ -1,3 +1,23 @@
-body{
-    background-color: rgb(10, 102, 5);
+*{
+    margin: 0;
+    padding: 0;
+    font-family: 'Poppins',sans-serif;
+    box-sizing: border-box;
+}
+.container{
+    width: 100%;
+    height: 100vh;
+   /* background: rgb(30,70,50);*/
+    background-image: url("Images/tavolo.jpg");
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.tavolo{
+    /*background: #18501a;*/
+    background-image: url("Images/piano2.jpg");
+    height: 700px;
+    width: 100%;
+    margin: 2%;
+    border:solid 15px #50211d;
 }
