--- a/JavaScriptCode/Pinella/style.css
+++ b/JavaScriptCode/Pinella/style.css
@@ -5,10 +5,10 @@
     box-sizing: border-box;
 }
 .container{
-    width: 100%;
+    max-width: 100%;
     height: 100vh;
     /*background: rgb(34, 121, 77);*/
-  background-image: url("Images/sfondo-legno.jpg");
+  background-image: url("../immagini/sfondo-legno.jpg");
     display: flex;
     align-items: center;
     justify-content: center;
