--- a/JavaScriptCode/Pinella/style.css
+++ b/JavaScriptCode/Pinella/style.css
@@ -6,7 +6,7 @@
 }
 .container{
     max-width: 100%;
-    height: 100%;
+    height: 100vh;
     /*background: rgb(34, 121, 77);*/
   background-image: url("../immagini/sfondo-legno.jpg");
     display: flex;
