Added GitHub contibutors

--- a/JavaScriptCode/Pinella/style.css
+++ b/JavaScriptCode/Pinella/style.css
@@ -16,8 +16,8 @@
 }
 .tavolo{
 background: #2b4d2b;
-height: 540px;
+height: 90%;
 width: 100%;
 margin: 2%;
-border:solid 15px #181818;
+border:solid 15px #090402;
 }
