--- a/JavaScriptCode/style.css
+++ b/JavaScriptCode/style.css
@@ -1,3 +1,8 @@
 body{
     background-color: rgb(155, 211, 234);
 }
+.sfondoRiquadro img {
+    width:100%;
+    height: 100%;
+    object-fit: cover;
+}
