--- a/JavaScriptCode/Pinella/style.css
+++ b/JavaScriptCode/Pinella/style.css
@@ -22,7 +22,11 @@ margin: 2%;
 border:solid 15px #090402;
 }
 .img-retro{
-  height: 50px;
-  width: 30px;
+  height: 75px;
+  width: 50px;
   display: flex;
+}
+.Mazzo{
+  display: inline;
+  
 }
