--- a/JavaScriptCode/Pinella/style.css
+++ b/JavaScriptCode/Pinella/style.css
@@ -32,21 +32,31 @@
 }
 .mazzoPinella{
   display: flex;
-  
 }
+
 .giocatore{
   display: flex;
-  background:white;
+  background: #8de7d1;
   position: relative;
   gap: 8px;
   width: 100%;
   flex-wrap: wrap;
 }
 .scarto{
-  background-color: white;
+  background-color: rgba(116, 255, 44, 0.47);
   display: flex;
   flex-direction: row;
   position: absolute;
-  top: 50%;
-  left: 0;
+  top: 0;
+  left: 50%;
+}
+.button{
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    text-align: center;
+    display: inline-block;
+    font-size: 40px;
+    margin: 4px 2px;
+    cursor: pointer;
 }
