--- a/JavaScriptCode/Pinella/style.css
+++ b/JavaScriptCode/Pinella/style.css
@@ -7,7 +7,6 @@
 .container{
     max-width: 100%;
     height: 100vh;
-    /*background: rgb(34, 121, 77);*/
     background-image: url("../immagini/sfondo-legno.jpg");
     display: flex;
     align-items: center;
@@ -30,9 +29,6 @@
   width: 50px;
   display: flex;
 }
-.mazzoPinella{
-  display: flex;
-}
 
 .giocatore{
   display: flex;
@@ -42,7 +38,7 @@
   width: 100%;
   flex-wrap: wrap;
 }
-.scarto{
+.mazzo{
   background-color: rgba(116, 255, 44, 0.47);
   display: flex;
   flex-direction: row;
