--- a/JavaScriptCode/Pinella/style.css
+++ b/JavaScriptCode/Pinella/style.css
@@ -43,7 +43,8 @@
   display: flex;
   flex-direction: row;
   position: absolute;
-  top: 0;
+  transform: translate(-50%, -50%);
+  top: 50%;
   left: 50%;
 }
 .button{
