--- a/JavaScriptCode/Pinella/style.css
+++ b/JavaScriptCode/Pinella/style.css
@@ -23,6 +23,7 @@
   flex-direction: column;
   justify-content: flex-end;
   position: relative;
+  align-items: center;
 }
 .img-retro{
   height: 75px;
@@ -32,12 +33,15 @@
 
 .giocatore{
   display: flex;
-  background: #8de7d1;
   position: relative;
   gap: 8px;
-  width: 100%;
+  width: fit-content;
   flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
+  padding-bottom: 8px;
 }
+
 .mazzo{
   background-color: rgba(116, 255, 44, 0.47);
   display: flex;
