--- a/JavaScriptCode/Pinella/style.css
+++ b/JavaScriptCode/Pinella/style.css
@@ -43,17 +43,17 @@
   display: flex;
   flex-direction: row;
   position: absolute;
-  transform: translate(-50%, -50%);
-  top: 50%;
+  transform: translate(-50%, 0);
+  top: 0;
   left: 50%;
 }
-.button{
-    background-color: #4CAF50;
-    border: none;
-    color: white;
-    text-align: center;
-    display: inline-block;
-    font-size: 40px;
-    margin: 4px 2px;
-    cursor: pointer;
+.scarto{
+  display:flex;
+  position: absolute;
+  transform: translate(0, -50%);
+  top: 50%;
+  width: 100%;
+  height: 75px;
+  flex-wrap: wrap;
+  gap: 8px;
 }
