--- a/JavaScriptCode/Pinella/styleUsers.css
+++ b/JavaScriptCode/Pinella/styleUsers.css
@@ -87,9 +87,18 @@ label:last-child span {
     margin-bottom: 10px;
     display: flex;
     flex-direction: column;
-    gap:8px;   
+    gap:8px;
+    font-size: 20px; 
 }
 .label-host{
     display: flex;
     justify-content: space-around;
+}
+input[type="text"]{
+    display: flex;
+    text-align: center;
+    border-radius: 5px;
+}
+.btn-crea{
+    display: flex;
 }
