--- a/JavaScriptCode/Pinella/style.css
+++ b/JavaScriptCode/Pinella/style.css
@@ -1,17 +1,17 @@
-*{
-    margin: 0;
-    padding: 0;
-    font-family: 'Poppins',sans-serif;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Poppins", sans-serif;
+  box-sizing: border-box;
 }
-.container{
-    max-width: 100%;
-    height: 100vh;
-    background-image: url("../immagini/sfondo-legno.jpg");
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-size: cover;
+.container {
+  max-width: 100%;
+  height: 100vh;
+  background-image: url("../immagini/sfondo-legno.jpg");
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-size: cover;
 }
 .tavolo {
   background: #2b4d2b;
@@ -25,13 +25,13 @@
   position: relative;
   align-items: center;
 }
-.img-retro{
+.img-retro {
   height: 75px;
   width: 50px;
   display: flex;
 }
 
-.giocatore{
+.giocatore {
   display: flex;
   position: relative;
   gap: 8px;
@@ -42,21 +42,21 @@
   padding-bottom: 8px;
 }
 
-.mazzo{
+.mazzo {
   left: 0;
 }
-.scarto{
+.scarto {
   width: fit-content;
   flex-wrap: wrap;
   gap: 8px;
 }
 
-.util1{
+.util1 {
   display: flex;
   flex-direction: row;
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
-  height : fit-content;
+  height: fit-content;
 }
