--- a/JavaScriptCode/Pinella/styleUsers.css
+++ b/JavaScriptCode/Pinella/styleUsers.css
@@ -22,7 +22,6 @@
   border-radius: 12px;
   padding: 15px;
   color: white;
-  border: 3px solid black;
   box-shadow: 2px 1px 29px 6px rgba(0, 0, 0, 0.3);
 }
 .button {
@@ -122,13 +121,21 @@ input[type="text"] {
   text-align: center;
   border-radius: 5px;
 }
-.btnInvia {
+.btnInvia1 {
   display: flex;
   position: relative;
   justify-content: space-evenly;
   align-content: stretch;
   flex-direction: column;
   transform: translate(0,125px);
+}
+.btnInvia2{
+  display: flex;
+  position: relative;
+  justify-content: space-evenly;
+  align-content: stretch;
+  flex-direction: column;
+  transform: translate(0,85px);
 }
 .idStanza {
   width: 30px;
