--- a/JavaScriptCode/Pinella/styleUsers.css
+++ b/JavaScriptCode/Pinella/styleUsers.css
@@ -114,6 +114,7 @@ label:last-child span {
   margin-left: 5px;
   height: 30px;
   width: 30px;
+  border-radius: 3px;
 }
 
 input[type="text"] {
@@ -127,7 +128,7 @@ input[type="text"] {
   justify-content: space-evenly;
   align-content: stretch;
   flex-direction: column;
-  transform: translate(0,125px);
+  transform: translate(0,127px);
 }
 .btnInvia2{
   display: flex;
@@ -135,7 +136,7 @@ input[type="text"] {
   justify-content: space-evenly;
   align-content: stretch;
   flex-direction: column;
-  transform: translate(0,85px);
+  transform: translate(0,87px);
 }
 .idStanza {
   width: 30px;
@@ -152,4 +153,43 @@ input[type="text"] {
 }
 .campi{
   height: 30px;
+}
+.btn-stanza{
+  background: #24a134;
+  height: 30px;
+  border: #2b4d2b;
+  color:white;
+  border-radius: 5px;
+}
+.btn-invia1{
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  width: 470px;
+  height: 30px;
+  background: #24a134;
+  text-align: center;
+  border-radius: 3px;
+  text-decoration: none;
+  color:white;
+}
+.btn-invia2{
+  text-align: center;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  text-decoration: none;
+  width: 470px;
+  height: 30px;
+  background: #24a134;
+  border-radius: 3px;
+  color: white;
+}
+.btn-join{
+  background:#24a134;
+  color: white;
+  border-radius: 3px;
+  height: 33px;
+  border: #24a134 2px;
 }
