--- a/JavaScriptCode/Pinella/style.css
+++ b/JavaScriptCode/Pinella/style.css
@@ -7,7 +7,7 @@
 .container {
   max-width: 100%;
   height: 100vh;
-  background-image: url("../../immagini/sfondo-legno.jpg");
+  background-image: url("../immagini/sfondo-legno.jpg");
   display: flex;
   align-items: center;
   justify-content: center;
