--- a/JavaScriptCode/Pinella/styleUsers.css
+++ b/JavaScriptCode/Pinella/styleUsers.css
@@ -7,7 +7,7 @@
 .container {
   max-width: 100%;
   height: 100vh;
-  background-image: url("../../immagini/sfondo-legno.jpg");
+  background-image: url("../immagini/sfondo-legno.jpg");
   display: flex;
   align-items: center;
   justify-content: center;
@@ -109,7 +109,7 @@ label:last-child span {
 }
 .copy {
   display: flex;
-  background-image: url("../../immagini/save.png");
+  background-image: url("../immagini/save.png");
   background-size: cover;
   margin-left: 5px;
   height: 30px;
