--- a/JavaScriptCode/Pinella/css/styleUsers.css
+++ b/JavaScriptCode/Pinella/css/styleUsers.css
@@ -17,8 +17,9 @@
 .form {
   width: 500px;
   height: 500px;
+  display: flex;
+  flex-direction: column;
   background: #2b4d2b;
-  margin: 0 auto;
   border-radius: 12px;
   padding: 15px;
   color: white;
@@ -126,17 +127,19 @@ input[type="text"] {
   display: flex;
   position: relative;
   justify-content: space-evenly;
-  align-content: stretch;
-  flex-direction: column;
-  transform: translate(0,127px);
+  align-content: center;
+  flex-direction: row;
+  transform: translate(0,125px);
+  width:100%;
 }
 .btnInvia2{
   display: flex;
   position: relative;
   justify-content: space-evenly;
-  align-content: stretch;
-  flex-direction: column;
-  transform: translate(0,87px);
+  align-content: center;
+  flex-direction: row;
+  transform: translate(0,85px);
+  width:100%;
 }
 .idStanza {
   width: 30px;
@@ -161,30 +164,19 @@ input[type="text"] {
   color:white;
   border-radius: 5px;
 }
-.btn-invia1{
-  display: flex;
-  position: relative;
-  flex-direction: column;
-  width: 470px;
-  height: 30px;
-  background: #24a134;
-  text-align: center;
-  border-radius: 3px;
-  text-decoration: none;
-  color:white;
-}
-.btn-invia2{
+.btn-invia{
   text-align: center;
   position: relative;
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
   text-decoration: none;
-  width: 470px;
-  height: 30px;
+  width: 100px;
+  height: 40px;
   background: #24a134;
   border-radius: 3px;
   color: white;
+  justify-content: center;
 }
 .btn-join{
   background:#24a134;
