--- a/JavaScriptCode/Pinella/css/styleUsers.css
+++ b/JavaScriptCode/Pinella/css/styleUsers.css
@@ -1,187 +1,204 @@
 * {
-  margin: 0;
-  padding: 0;
-  font-family: "Poppins", sans-serif;
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: "Poppins", sans-serif;
+    box-sizing: border-box;
 }
+
 .container {
-  max-width: 100%;
-  height: 100vh;
-  background-image: url("../../immagini/sfondo-legno.jpg");
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-size: cover;
+    max-width: 100%;
+    height: 100vh;
+    background-image: url("../../immagini/sfondo-legno.jpg");
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-size: cover;
 }
 
 .form {
-  width: 500px;
-  height: 500px;
-  display: flex;
-  flex-direction: column;
-  background: #2b4d2b;
-  border-radius: 12px;
-  padding: 15px;
-  color: white;
-  box-shadow: 2px 1px 29px 6px rgba(0, 0, 0, 0.3);
+    width: 500px;
+    height: 500px;
+    display: flex;
+    flex-direction: column;
+    background: #2b4d2b;
+    border-radius: 12px;
+    padding: 15px;
+    color: white;
+    box-shadow: 2px 1px 29px 6px rgba(0, 0, 0, 0.3);
 }
+
 .button {
-  background: black;
-  color: green;
+    background: black;
+    color: green;
 }
+
 h1 {
-  text-align: center;
+    text-align: center;
 }
+
 :focus {
-  outline: 0;
-  border-color: #0d5a17;
-  box-shadow: 0 0 0 4px #b5c9fc;
+    outline: 0;
+    border-color: #0d5a17;
+    box-shadow: 0 0 0 4px #b5c9fc;
 }
 
 .opzioni div {
-  display: flex;
-  flex-wrap: wrap;
-  margin-top: 0.5rem;
-  justify-content: center;
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 0.5rem;
+    justify-content: center;
 }
 
 .opzioni input[type="radio"] {
-  clip: rect(0 0 0 0);
-  clip-path: inset(100%);
-  height: 1px;
-  overflow: hidden;
-  position: absolute;
-  white-space: nowrap;
-  width: 1px;
+    clip: rect(0 0 0 0);
+    clip-path: inset(100%);
+    height: 1px;
+    overflow: hidden;
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
 }
 
 .opzioni input[type="radio"]:checked + span {
-  box-shadow: 0 0 0 0.0625em #0d5a17;
-  background-color: #dee7ff;
-  z-index: 1;
-  color: #0d5a17;
+    box-shadow: 0 0 0 0.0625em #0d5a17;
+    background-color: #dee7ff;
+    z-index: 1;
+    color: #0d5a17;
 }
 
 label span {
-  display: block;
-  cursor: pointer;
-  background-color: #fff;
-  padding: 0.375em 0.75em;
-  position: relative;
-  margin-left: 0.0625em;
-  box-shadow: 0 0 0 0.0625em #b5bfd9;
-  letter-spacing: 0.05em;
-  color: #247444;
-  text-align: center;
-  transition: background-color 0.5s ease;
+    display: block;
+    cursor: pointer;
+    background-color: #fff;
+    padding: 0.375em 0.75em;
+    position: relative;
+    margin-left: 0.0625em;
+    box-shadow: 0 0 0 0.0625em #b5bfd9;
+    letter-spacing: 0.05em;
+    color: #247444;
+    text-align: center;
+    transition: background-color 0.5s ease;
 }
 
 label:first-child span {
-  border-radius: 0.375em 0 0 0.375em;
+    border-radius: 0.375em 0 0 0.375em;
 }
 
 label:last-child span {
-  border-radius: 0 0.375em 0.375em 0;
+    border-radius: 0 0.375em 0.375em 0;
 }
+
 .box {
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
-  font-size: 20px;
-  position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    font-size: 20px;
+    position: relative;
 }
+
 .label-host {
-  display: flex;
-  justify-content: space-around;
+    display: flex;
+    justify-content: space-around;
 }
 
 .idContainer {
-  display: flex;
-  flex-direction: row-reverse;
-  width: 100%;
+    display: flex;
+    flex-direction: row-reverse;
+    width: 100%;
 }
 
 .idOutput {
-  width: 100%;
-  height: 30px;
+    width: 100%;
+    height: 30px;
 }
-.textNome{
-  height: 30px;
+
+.textNome {
+    height: 30px;
 }
+
 .copy {
-  display: flex;
-  background-image: url("../../immagini/save.png");
-  background-size: cover;
-  margin-left: 5px;
-  height: 30px;
-  width: 30px;
-  border-radius: 3px;
+    display: flex;
+    background-image: url("../../immagini/save.png");
+    background-size: cover;
+    margin-left: 5px;
+    height: 30px;
+    width: 30px;
+    border-radius: 3px;
 }
 
 input[type="text"] {
-  display: flex;
-  text-align: center;
-  border-radius: 5px;
+    display: flex;
+    text-align: center;
+    border-radius: 5px;
 }
+
 .btnInvia1 {
-  display: flex;
-  position: relative;
-  justify-content: space-evenly;
-  align-content: center;
-  flex-direction: row;
-  transform: translate(0,125px);
-  width:100%;
+    display: flex;
+    position: relative;
+    justify-content: space-evenly;
+    align-content: center;
+    flex-direction: row;
+    transform: translate(0, 125px);
+    width: 100%;
 }
-.btnInvia2{
-  display: flex;
-  position: relative;
-  justify-content: space-evenly;
-  align-content: center;
-  flex-direction: row;
-  transform: translate(0,85px);
-  width:100%;
+
+.btnInvia2 {
+    display: flex;
+    position: relative;
+    justify-content: space-evenly;
+    align-content: center;
+    flex-direction: row;
+    transform: translate(0, 85px);
+    width: 100%;
 }
+
 .idStanza {
-  width: 30px;
+    width: 30px;
 }
+
 .label-connect {
-  display: flex;
-  justify-content: space-around;
-  height: 30px;
+    display: flex;
+    justify-content: space-around;
+    height: 30px;
 }
-.label-connect1{
-  display: flex;
-  justify-content: space-around;
-  height: 30px;
+
+.label-connect1 {
+    display: flex;
+    justify-content: space-around;
+    height: 30px;
 }
-.campi{
-  height: 30px;
+
+.campi {
+    height: 30px;
 }
-.btn-stanza{
-  background: #24a134;
-  height: 30px;
-  border: #2b4d2b;
-  color:white;
-  border-radius: 5px;
+
+.btn-stanza {
+    background: #24a134;
+    height: 30px;
+    border: #2b4d2b;
+    color: white;
+    border-radius: 5px;
 }
-.btn-invia{
-  text-align: center;
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  text-decoration: none;
-  width: 100px;
-  height: 40px;
-  background: #24a134;
-  border-radius: 3px;
-  color: white;
-  justify-content: center;
+
+.btn-invia {
+    text-align: center;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    text-decoration: none;
+    width: 100px;
+    height: 40px;
+    background: #24a134;
+    border-radius: 3px;
+    color: white;
+    justify-content: center;
 }
-.btn-join{
-  background:#24a134;
-  color: white;
-  border-radius: 3px;
-  height: 33px;
-  border: #24a134 2px;
+
+.btn-join {
+    background: #24a134;
+    color: white;
+    border-radius: 3px;
+    height: 33px;
+    border: #24a134 2px;
 }
