--- a/JavaScriptCode/Pinella/css/styleUsers.css
+++ b/JavaScriptCode/Pinella/css/styleUsers.css
@@ -132,24 +132,22 @@ input[type="text"] {
     border-radius: 5px;
 }
 
-.btnInvia1 {
+.inizio {
     display: flex;
     position: relative;
     justify-content: space-evenly;
     align-content: center;
     flex-direction: row;
-    transform: translate(0, 125px);
     width: 100%;
+    visibility: hidden;
 }
 
-.btnInvia2 {
-    display: flex;
-    position: relative;
-    justify-content: space-evenly;
-    align-content: center;
-    flex-direction: row;
+._1{
+    transform: translate(0, 125px);
+}
+
+._2{
     transform: translate(0, 85px);
-    width: 100%;
 }
 
 .idStanza {
