terminata l'implementazione della condivisione delle carte
Bisogna ancora decidere dove mettere i 2 nuovi pulsanti

--- a/JavaScriptCode/Pinella/css/style.css
+++ b/JavaScriptCode/Pinella/css/style.css
@@ -64,3 +64,15 @@
     width: 100%;
     height: fit-content;
 }
+
+.fineTurno{
+    width: 100px;
+    height: 50px;
+    background-color: #ffff;
+}
+
+.reset{
+    width: 100px;
+    height: 50px;
+    background-color: #ffff;
+}
